# korean-badword-check

./: BadWord.py  LICENSE.md  README.md  pyproject.toml  test.py
badword_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
badword_model/variables/: variables.data-00000-of-00001  variables.index
