[tool.poetry]
name = "koreanbadwork"
version = "0.1.0"
description = "Korean badword check"
authors = ["MisileLaboratory, Klosie"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
hgtk = "0.1.3"
matplotlib = "3.6.1"
numpy = "1.23.4"
pandas = "1.5.1"
sklearn = "0.0"
tf-nightly = "^2.12.0.dev20221031"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
