[tool.poetry]
name = "koreanbadwork"
version = "0.1.0"
description = "Korean badword check"
authors = ["MisileLaboratory, Klosie"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
hgtk = "0.2.0"
matplotlib = "3.7.1"
numpy = "1.24.2"
pandas = "1.5.3"
sklearn = "0.0.post12"
tf-nightly = "^2.12.0-alpha.20230113"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
